# Ollama-WebUI

./: .dockerignore  .env.dist  .env.distributable  .gitignore  Dockerfile  README-Docker.md  README.md  bun.lockb  components.json  compose.dev.yaml  compose.prod.yaml  compose.yaml  file-tree.txt  index.html  package-lock.json  package.json  pwer.ps1  tailwind.config.js
.husky/: pre-commit
backend/: .dockerignore  Dockerfile  README.md  conftest.py  manage.py  pyproject.toml  start.sh  test_knowledge.py  test_rag.py
backend/api/: admin.py  apps.py  endpoints.py  renderers.py  views.py  views_old.py
backend/api/fixtures/: default_agents.json  default_conversations.json
backend/api/middleware/: auth_middleware.py  csrf_middleware.py  rate_limit_middleware.py
backend/api/migrations/: 0001_initial.py  0002_alter_conversation_created_by.py  0002_alter_customuser_options_alter_customuser_table.py  0002_alter_message_id_alter_messageimage_id_and_more.py  0002_assistant.py  0002_assistant_id_alter_assistant_sender.py  0002_remove_conversation_id_alter_conversation_uuid_and_more.py  0002_rename_assistant_message_model_remove_message_sender.py  0003_message_meta_model_message_meta_user.py  0003_remove_assistant_sender_remove_customuser_sender_and_more.py  0004_alter_conversation_model.py  0004_message_image.py  0005_alter_assistant_icon.py
backend/api/models/: __init__.py  assistant.py  base.py  conversation.py  liked_messages.py  message.py  pinned_messages.py  settings.py  user.py
backend/api/models/agent/: agent.py  tools.py
backend/api/models/assistant/: assistant.py
backend/api/models/auth/: user.py
backend/api/models/chat/: assistant.py  conversation.py  custom_prompt.py  deleted_messages.py  image.py  interactions.py  liked_messages.py  message.py  pinned_messages.py
backend/api/models/conversation/: __init__.py  conversation.py
backend/api/models/images/: image.py
backend/api/providers/: __init__.py  base_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
backend/api/repositories/: agent_repository.py  assistant_repository.py  conversation_repository.py  message.py  message_repository.py  provider_settings_repository.py  tool_repository.py  user_repository.py
backend/api/serializers/: agent_serializer.py  assistant.py  conversation.py  custom_prompt_serializer.py  image_serializer.py  liked_messages.py  message.py  pinned_messages.py  prompt_serializer.py  provider_settings_serializer.py  sender.py  settings.py  tool_serializer.py  user.py
backend/api/services/: agent_service.py  assistant_service.py  cache_service.py  chat_service.py  conversation_service.py  image_service.py  knowledge_service.py  message_processor_service.py  message_service.py  models_service.py  prompt_service.py  provider_settings_service.py  settings_service.py  tool_service.py  user_service.py
backend/api/view/: auth.py  chat.py  message.py  ollama.py  openai.py
backend/api/views/: __init__.py  agent_view.py  authentication_view.py  chat.py  chat_view.py  conversation_view.py  custom_prompt.py  image_view.py  knowledge_view.py  message_view.py  models_view.py  prompt_view.py  provider_settings_view.py  settings_view.py  tools_view.py
backend/docker/: entrypoint.sh
backend/docker/ca-certificates/: .gitkeep
backend/features/agents/: apps.py  models.py  urls.py  views.py
backend/features/analytics/: apps.py  base.py  dispatcher.py  models.py  urls.py  utils.py  views.py
backend/features/authentication/: apps.py  models.py  urls.py  views.py
backend/features/completions/: apps.py  models.py  urls.py  views.py
backend/features/conversations/: apps.py  models.py  urls.py  views.py
backend/features/knowledge/: apps.py  models.py  urls.py  views.py
backend/features/prompts/: apps.py  models.py  urls.py  views.py
backend/features/providers/: apps.py  models.py  registry.py  schemas.py  signals.py  urls.py  views.py
backend/features/tags/: apps.py  models.py  urls.py  views.py
backend/features/tools/: apps.py  models.py  urls.py  views.py
backend/ollama_webui/: settings.py  urls.py
backend/providers/: base_provider.py
backend/repository/: message_repository.py  sender_repository.py
backend/services/: chat_service.py
backend/services/message/: message_service.py
backend/services/ollama/: __init__.py  ollama.py
backend/services/openai/: openai.py
backend/services/sender/: sender_service.py  user_sender_service.py
backend/settings/: asgi.py  settings.py  urls.py  wsgi.py
(+760 files in other folders)
